--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -6,7 +6,7 @@
 ]{book}
 \title{Procedures and Guidelines}
 \author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2021-11-29}
+\date{2021-12-01}
 
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
@@ -100,8 +100,6 @@ These guidelines are modeled on best practices in the life sciences and where ne
 
 \textbf{For Instructors} Any concerns or omissions from these procedures and guidelines can be forwarded to Jason Pither (\href{mailto:jason.pither@ubc.ca}{\nolinkurl{jason.pither@ubc.ca}}) or Mathew Vis-Dunbar (\href{mailto:mathew.vis-dunbar@ubc.ca}{\nolinkurl{mathew.vis-dunbar@ubc.ca}})
 
-\textbf{Note}
-
 This is a living document. Expect that content will be added over time and adapted as needs and circumstances change.
 
 \hypertarget{copyright}{%
@@ -115,6 +113,14 @@ Please use the following for citing this document
 Copeland, C., Pither, J., Vis-Dunbar, M. (2021). \emph{Procedures and Guidelines}. \url{https://ubco-biology.github.io/Procedures-and-Guidelines/}
 
 All source files are available at \url{https://github.com/ubco-biology/Procedures-and-Guidelines}.
+
+\hypertarget{ubco-biology-open-materials}{%
+\section*{UBCO Biology open materials}\label{ubco-biology-open-materials}}
+\addcontentsline{toc}{section}{UBCO Biology open materials}
+
+This resource is part of a larger project to host UBCO Biology lab materials in an open, accessible format.
+
+All BIOL open materials can be found at \url{https://ubco-biology.github.io/}
 
 \hypertarget{why-procedures-and-guidelines}{%
 \section*{Why Procedures and Guidelines?}\label{why-procedures-and-guidelines}}
@@ -159,7 +165,7 @@ This book is divided into 4 sections.
 \hypertarget{file-and-data-management}{%
 \chapter{File and Data Management}\label{file-and-data-management}}
 
-\emph{Last updated 2021-11-29}
+\emph{Last updated 2021-12-01}
 
 Well-organized data is critical to transparency, reproducibility, and generally maintaining one's sanity when conducting research. When we talk about file and data management, we may be referring to one of many aspects of making our data understandable to others, to a computer, or to our future selves that have succumb to memory lapses. Making data comprehensible is really about well-structured and communicated metadata that is, whenever possible, implemented according to conventions or standards.
 
@@ -182,7 +188,7 @@ Organizing and formatting data is a discussion about the best way to sort and pa
 \hypertarget{file-naming}{%
 \chapter{File Naming}\label{file-naming}}
 
-\emph{Last updated 2021-11-29}
+\emph{Last updated 2021-12-01}
 
 File naming isn't exactly fun, but it is crucial for organizing, describing, and managing all kinds of work, especially research. So, let's talk about the file naming conventions that you will be expected to use while at UBCO.
 
@@ -458,7 +464,7 @@ Pither_BIOL116RProject_Lab-report_V3.docx
 \hypertarget{directory-structures}{%
 \chapter{Directory Structures}\label{directory-structures}}
 
-\emph{Last updated 2021-11-29}
+\emph{Last updated 2021-12-01}
 
 Now that we've covered naming conventions, let's pretend that you store everything on your computer in a single folder. Imagine how long it would take you to find data you collected on a specific day a few years ago. Instead of keeping every document in a single place, we often organize our files using directory (aka folder) structures. This helps us save precious time and improve our productivity.
 
@@ -854,7 +860,7 @@ We can start to see that if you were to share your entire project directory with
 \hypertarget{tidy-data}{%
 \chapter{Tidy data}\label{tidy-data}}
 
-\emph{Last updated 2021-11-29}
+\emph{Last updated 2021-12-01}
 
 We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When properly organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
 
@@ -1050,7 +1056,7 @@ Ellison-lake & 3 & 1 \\
 \hypertarget{figures-tables}{%
 \chapter{Figures \& Tables}\label{figures-tables}}
 
-\emph{Last updated 2021-11-29}
+\emph{Last updated 2021-12-01}
 
 These guidelines are based on current "best practices" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. Our aim is to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
 
@@ -1265,7 +1271,7 @@ When displaying data using a figure, follow these guidelines:
 \hypertarget{sketches-drawings}{%
 \chapter{Sketches \& Drawings}\label{sketches-drawings}}
 
-\emph{Last updated 2021-11-29}
+\emph{Last updated 2021-12-01}
 
 We've heard it before, a picture is worth a thousand words. While a common place phrase, it echoes very true in biological research. Describing in text the morphological features of an organism is no easy task. Trying to form a mental image of an organism described in text still more difficult! As a simple example, imagine trying to draw a representation of \emph{Fritillaria pudica} from the botanical description in the \href{http://www.efloras.org/florataxon.aspx?flora_id=1\&taxon_id=242101628}{Flora of North America}. No easy task. So let's talk about sketches\ldots{}
 
@@ -1411,7 +1417,7 @@ This figure is not directed to have the anterior region at the top, the labellin
 \hypertarget{markdown-1}{%
 \chapter{Markdown}\label{markdown-1}}
 
-\emph{Last updated 2021-11-29}
+\emph{Last updated 2021-12-01}
 
 Markdown is a markup language used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on the principle of separating content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text, so any computer anywhere at any time will be able to open them and consequently, we will be able to read them.
 
@@ -1451,8 +1457,6 @@ You'll need a text editor or a dedicated Markdown editor! What's the difference?
 
 A text editor will not format your markdown, it'll just display the plain text. When you open the \_README.md files noted throughout this book (either in \textbf{TextEdit} on a Mac or \textbf{Notepad} on Windows), you see the raw, plain text output.
 
-\textbf{Note}
-
 TextEdit on your mac is not actually a plain text editor; while TextEdit can read and open a Markdown file, it cannot create a Markdown file. MacOS does not ship with a plain text editor like Notepad on Windows. So if you're on a Mac, you'll need to download a text editor.
 
 A dedicated Markdown editor will format your Markdown as you type, so you get an idea as to how it will render if you were to save it as a pdf, html etc. There are a lot of Markdown editors available, many of them free and open source, and many for very specific use cases. When you have some free time, you may choose to check out the following comprehensive list \url{https://www.markdownguide.org/tools/}.
@@ -1472,8 +1476,6 @@ Once downloaded, launch it and you'll be presented with an \texttt{untitled} bla
 \includegraphics{images/MD_preview-toggle.png}
 \caption{Toggling Markdown preview in Atom.}
 \end{figure}
-
-\textbf{Note}
 
 One other thing that you'll want to do is to set up how Atom handles tabs. A tab may be either \texttt{hard} or \texttt{soft}. A \texttt{hard} tab is encoded with a tab character, which can throw off the interoperability that we're trying to achieve with using a plain text editor. A \texttt{soft} tab is simply encoded as a series of spaces; this plays much better in general as text is moved between programs and operating systems.
 
@@ -1644,7 +1646,7 @@ Output
 This text is placed within a block quote
 \end{quote}
 
-\textbf{NOTE} Leave a blank line both before the blockquote and after it.
+Leave a blank line both before the blockquote and after it.
 
 \hypertarget{lists}{%
 \section{Lists}\label{lists}}
@@ -1795,7 +1797,7 @@ We'll keep it simple for the moment; this is all you really need for your \_READ
 \hypertarget{apa-citations}{%
 \chapter{APA Citations}\label{apa-citations}}
 
-\emph{Last updated 2021-11-29}
+\emph{Last updated 2021-12-01}
 
 This chapter is a brief overview of the 7th edition of APA. For a more in depth review, please consult \href{https://guides.library.ubc.ca/apacitationstyle}{the library's APA Citation Guide}. For the full APA manual, please consult the \href{http://resolve.library.ubc.ca/cgi-bin/catsearch?bid=10057275}{Publication Manual of the American Psychological Association}, available through the library.
 
@@ -1895,7 +1897,7 @@ Mei, Y., Yu, K., Lo, J. C. Y., Takeuchi, L. E., Hadjesfandiari, N., Yazdani-Ahma
 \hypertarget{academic-integrity}{%
 \chapter{Academic Integrity}\label{academic-integrity}}
 
-\emph{Last updated 2021-11-29}
+\emph{Last updated 2021-12-01}
 
 Academic integrity is the act of performing honest, responsible scholarship, much like scientific integrity is honest, responsible science. Academic integrity is very much about how we conduct ourselves in the pursuit of our studies, respecting those we learn from and work with and the contributions they make to our scholarly and scientific endeavours.
 
@@ -1904,7 +1906,7 @@ Learn more about academic integrity from the \href{https://students.ok.ubc.ca/ac
 \hypertarget{copyright-1}{%
 \chapter{Copyright}\label{copyright-1}}
 
-\emph{Last updated 2021-11-29}
+\emph{Last updated 2021-12-01}
 
 Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
 
@@ -1913,7 +1915,7 @@ Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/
 \hypertarget{glossary}{%
 \chapter{Glossary}\label{glossary}}
 
-\emph{Last updated 2021-11-29}
+\emph{Last updated 2021-12-01}
 
 \textbf{A priori hypothesis:} Hypothesis that is generated before the research study takes place. Presenting the hypothesis before the study takes place helps in avoiding replacing the hypothesis later with one that fits the data better aka hypothesizing after the fact (HARKing).
 
@@ -2127,8 +2129,6 @@ Two different methods are described here to calculate an object's size under the
 
 First, determine the field of view diameter of your microscope for each objective setting.
 
-\textbf{Note}
-
 These values might be provided to you in your lab manual. If so, proceed to the next section, \protect\hyperlink{estimating-object-size}{estimating object size}.
 
 To calculate field of view diameter, we first need to know the field number (FN). When you look at your microscope eyepiece, the FN is displayed after the ocular lens magnification. For example, you might see 10x/16. In this case, 10x is the ocular lens magnification and 16 mm is the FN.
@@ -2286,8 +2286,6 @@ Example: Using a particular objective lens, you find that there are 5 ocular uni
   Now you can calculate the size of a specimen by counting the number of ocular micrometer increments spanned by the specimen and multiplying it by the width of the ocular micrometer unit at that specific magnification. If your specimen is longer than it is wide, do this for both the width and the length of your specimen.
 \end{enumerate}
 
-\textbf{Note}
-
 Make sure to measure more than one specimen and report the range of sizes for each dimension to account for the natural variation that occurs in the population. For example, a bacillus-shaped bacterium that ranges between 1 to 5 \(\mu m\) in width and 4 to 10 \(\mu m\) in length would be expressed as 1-5\(\mu m\) x 4-10 \(\mu m\).
 
 \hypertarget{drawing-size}{%
@@ -2329,8 +2327,6 @@ In the previous example (Under Estimating object size using field of view diamet
 \[m = \frac{60mm}{0.3mm} = 200\]
 
 Alternatively, you can write this as a ratio with drawing size: real life size. In this case the scale would be 200:1.
-
-\textbf{Note}
 
 Place the scale or magnification on the bottom right of your drawing.
 
