--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -6,7 +6,7 @@
 ]{book}
 \title{Procedures and Guidelines}
 \author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2021-12-02}
+\date{2022-01-11}
 
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
@@ -165,7 +165,7 @@ This book is divided into 4 sections.
 \hypertarget{file-and-data-management}{%
 \chapter{File and Data Management}\label{file-and-data-management}}
 
-\emph{Last updated 2021-12-02}
+\emph{Last updated 2022-01-11}
 
 Well-organized data is critical to transparency, reproducibility, and generally maintaining one's sanity when conducting research. When we talk about file and data management, we may be referring to one of many aspects of making our data understandable to others, to a computer, or to our future selves that have succumb to memory lapses. Making data comprehensible is really about well-structured and communicated metadata that is, whenever possible, implemented according to conventions or standards.
 
@@ -188,7 +188,7 @@ Organizing and formatting data is a discussion about the best way to sort and pa
 \hypertarget{file-naming}{%
 \chapter{File Naming}\label{file-naming}}
 
-\emph{Last updated 2021-12-02}
+\emph{Last updated 2022-01-11}
 
 File naming isn't exactly fun, but it is crucial for organizing, describing, and managing all kinds of work, especially research. So, let's talk about the file naming conventions that you will be expected to use while at UBCO.
 
@@ -464,7 +464,7 @@ Pither_BIOL116RProject_Lab-report_V3.docx
 \hypertarget{directory-structures}{%
 \chapter{Directory Structures}\label{directory-structures}}
 
-\emph{Last updated 2021-12-02}
+\emph{Last updated 2022-01-11}
 
 Now that we've covered naming conventions, let's pretend that you store everything on your computer in a single folder. Imagine how long it would take you to find data you collected on a specific day a few years ago. Instead of keeping every document in a single place, we often organize our files using directory (aka folder) structures. This helps us save precious time and improve our productivity.
 
@@ -860,7 +860,7 @@ We can start to see that if you were to share your entire project directory with
 \hypertarget{tidy-data}{%
 \chapter{Tidy data}\label{tidy-data}}
 
-\emph{Last updated 2021-12-02}
+\emph{Last updated 2022-01-11}
 
 We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When properly organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
 
@@ -1056,7 +1056,7 @@ Ellison-lake & 3 & 1 \\
 \hypertarget{figures-tables}{%
 \chapter{Figures \& Tables}\label{figures-tables}}
 
-\emph{Last updated 2021-12-02}
+\emph{Last updated 2022-01-11}
 
 These guidelines are based on current "best practices" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. Our aim is to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
 
@@ -1271,7 +1271,7 @@ When displaying data using a figure, follow these guidelines:
 \hypertarget{sketches-drawings}{%
 \chapter{Sketches \& Drawings}\label{sketches-drawings}}
 
-\emph{Last updated 2021-12-02}
+\emph{Last updated 2022-01-11}
 
 We've heard it before, a picture is worth a thousand words. While a common place phrase, it echoes very true in biological research. Describing in text the morphological features of an organism is no easy task. Trying to form a mental image of an organism described in text still more difficult! As a simple example, imagine trying to draw a representation of \emph{Fritillaria pudica} from the botanical description in the \href{http://www.efloras.org/florataxon.aspx?flora_id=1\&taxon_id=242101628}{Flora of North America}. No easy task. So let's talk about sketches\ldots{}
 
@@ -1417,7 +1417,7 @@ This figure is not directed to have the anterior region at the top, the labellin
 \hypertarget{markdown-1}{%
 \chapter{Markdown}\label{markdown-1}}
 
-\emph{Last updated 2021-12-02}
+\emph{Last updated 2022-01-11}
 
 Markdown is a markup language used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on the principle of separating content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text, so any computer anywhere at any time will be able to open them and consequently, we will be able to read them.
 
@@ -1797,7 +1797,7 @@ We'll keep it simple for the moment; this is all you really need for your \_READ
 \hypertarget{apa-citations}{%
 \chapter{APA Citations}\label{apa-citations}}
 
-\emph{Last updated 2021-12-02}
+\emph{Last updated 2022-01-11}
 
 This chapter is a brief overview of the 7th edition of APA. For a more in depth review, please consult \href{https://guides.library.ubc.ca/apacitationstyle}{the library's APA Citation Guide}. For the full APA manual, please consult the \href{http://resolve.library.ubc.ca/cgi-bin/catsearch?bid=10057275}{Publication Manual of the American Psychological Association}, available through the library.
 
@@ -1894,10 +1894,136 @@ List all authors in the reference list and only the first author in the in-text 
 
 Mei, Y., Yu, K., Lo, J. C. Y., Takeuchi, L. E., Hadjesfandiari, N., Yazdani-Ahmadabadi, H., Brooks, D. E., Lange, D., \& Kizhakkedathu, J. N. (2018). Polymer-nanoparticle interaction as a design principle in the development of a durable ultrathin universal binary antibiofilm coating with long-term activity. \emph{ACS Nano}, \emph{12}(12), 11881-11891. \url{https://doi.org/10.1021/acsnano.8b05512}
 
+\hypertarget{reference-management-zotero}{%
+\chapter{Reference Management: Zotero}\label{reference-management-zotero}}
+
+\emph{Last updated 2022-01-11}
+
+Imperative to managing our education and research is managing our readings and references. We can do this manually or we can take advantage of a tool - citation management software - specifically designed to keep your references organized, shareable, and easily citable.
+
+There are several options out there. Some are great for inter-institutional collaborations, some for review projects that have you processing 10s of thousands of citations, and others are great for managing your day to day needs.
+
+Here we're going to get you set up with a tool wello suited for the latter - Zotero.
+
+This overview will get you set up with an account, and importing your first reference.
+
+Zotero is comprised of 4 components
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  A \textbf{desktop application}.
+\item
+  A \textbf{cloud application} that syncs with your desktop application.
+\item
+  A \textbf{web browser plugin} that gathers bibliographic information when you're looking at an article online.
+\item
+  A \textbf{word processor plugin} that facilitates creating citations and reference lists while writing.
+\end{enumerate}
+
+\hypertarget{installation-first-launch}{%
+\section{Installation \& first launch}\label{installation-first-launch}}
+
+First, get your environment set up. \textbf{Quite your word processor} and \textbf{make sure that you are in a position to quite your web browser}.
+
+Now, the \textbf{desktop application and word processor plugin}.
+
+Head to \url{https://www.zotero.org/download/}, download Zotero and Run the installer.
+
+\includegraphics{images/Z_DownloadZotero.png}
+
+\hypertarget{first-launch}{%
+\subsection*{First launch}\label{first-launch}}
+\addcontentsline{toc}{subsection}{First launch}
+
+Once installation is complete, if you launch the program, you should be greeted with the following:
+
+\includegraphics{images/Z_FirstLaunch.png}
+
+That's step one and four covered, as the word processor plugin is installed automatically.
+
+The plugin works with Microsoft Office, LibreOffice, and Google Docs. More on this later.
+
+\hypertarget{browser-plugin}{%
+\section{Browser plugin}\label{browser-plugin}}
+
+At this stage, Zotero will have launched a new window in your web browser, and you should see the opportunity to install the web browser plugin.
+
+If this doesn't happen, simply return to \url{https://www.zotero.org/download/} and install the plugin from there.
+
+Zotero will automatically detect your browser. We recommend using either Chrome or Firefox; the plugin for Safari is currently in beta development and a bit more complicated to get configured.
+
+\includegraphics{images/Z_BrowserPluginZotero.png}
+
+Now, to make sure everything is lined up, quite and then relaunch your web browser. You should then see a small icon in the upper right hand corner. If you're in Chrome, you'll have a puzzle piece in this same spot, click that and you'll see you're extensions, including the Zotero extension.
+
+\includegraphics{images/Z_PluginSuccess.png}
+
+\hypertarget{accounts-sync-setup}{%
+\section{Accounts \& sync setup}\label{accounts-sync-setup}}
+
+An account is required for cloud syncing and sharing folders.
+
+Fill in the necessary credentials here \url{https://www.zotero.org/user/register/} and we're almost done.
+
+\hypertarget{connecting-zotero-desktop-with-the-cloud}{%
+\subsection*{Connecting Zotero Desktop with the Cloud}\label{connecting-zotero-desktop-with-the-cloud}}
+\addcontentsline{toc}{subsection}{Connecting Zotero Desktop with the Cloud}
+
+Now that you've created an account, let's get your Desktop application connected with you account.
+
+In Zotero, go to \texttt{Edit\ \textgreater{}\ Preferences} and in the preferences tab go to \texttt{Sync}, fill in your credentials and click \texttt{Set\ Up\ Syncing}.
+
+\includegraphics{images/Z_Sync.png}
+
+\hypertarget{adding-citations}{%
+\section{Adding citations}\label{adding-citations}}
+
+First things first - because we want to be organized - in Zotero, create a folder for your project by right clicking on \texttt{My\ Library\ \textgreater{}\ New\ Collections...} and give it a name, like \texttt{BIOL\ Research} because that's informative.
+
+\includegraphics{images/Z_BIOLResearch.png}
+
+Say we're searching Web of Science Core Collection, we find an article we're interested in and we follow the link to read the article. And let's say that takes us here (que to follow the link): {[}\url{https://www.sciencedirect.com/science/article/pii/S0929139312000224}{]}\url{https://www.sciencedirect.com/science/article/pii/S0929139312000224})\{target=``\_blank''\}
+
+We'll see that when we're looking at an article, our web browser plugin changes to reflect this by now looking like a document.
+
+Click on it, and Zotero will harvest both the requisite meta data and the pdf for you.
+
+\includegraphics{images/Z_FirstImport.png}
+
+\hypertarget{renaming-pdfs}{%
+\section{Renaming PDFs}\label{renaming-pdfs}}
+
+Head back into Zotero and you'll see your reference.
+
+Select the arrow adjacent to the title and you'll see your PDF.
+
+Right click the PDF and select \texttt{Rename\ File\ from\ Parent\ Metadata} and you've got a nicely titled article. Double click the PDF and it opens in your default PDF reader.
+
+\includegraphics{images/Z_PDFRename.png}
+
+\hypertarget{syncing-to-the-cloud}{%
+\section{Syncing to the cloud}\label{syncing-to-the-cloud}}
+
+Click the sync button and send your citation and PDF to the cloud.
+
+Sync happens automatically on every launch. And notes or highlights that you make on your PDF will also be synced and updated.
+
+\includegraphics{images/Z_PDFSync.png}
+
+\hypertarget{zotero-cloud}{%
+\subsection*{Zotero Cloud}\label{zotero-cloud}}
+\addcontentsline{toc}{subsection}{Zotero Cloud}
+
+Head online and log in to your online account at \url{https://www.zotero.org/user/login/}
+
+You'll see your recently synced citation and associated attachments.
+
 \hypertarget{academic-integrity}{%
 \chapter{Academic Integrity}\label{academic-integrity}}
 
-\emph{Last updated 2021-12-02}
+\emph{Last updated 2022-01-11}
 
 Academic integrity is the act of performing honest, responsible scholarship, much like scientific integrity is honest, responsible science. Academic integrity is very much about how we conduct ourselves in the pursuit of our studies, respecting those we learn from and work with and the contributions they make to our scholarly and scientific endeavours.
 
@@ -1906,7 +2032,7 @@ Learn more about academic integrity from the \href{https://students.ok.ubc.ca/ac
 \hypertarget{copyright-1}{%
 \chapter{Copyright}\label{copyright-1}}
 
-\emph{Last updated 2021-12-02}
+\emph{Last updated 2022-01-11}
 
 Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
 
@@ -1915,7 +2041,7 @@ Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/
 \hypertarget{glossary}{%
 \chapter{Glossary}\label{glossary}}
 
-\emph{Last updated 2021-12-02}
+\emph{Last updated 2022-01-11}
 
 \textbf{A priori hypothesis:} Hypothesis that is generated before the research study takes place. Presenting the hypothesis before the study takes place helps in avoiding replacing the hypothesis later with one that fits the data better aka hypothesizing after the fact (HARKing).
 
