--- a/11-Copyright.Rmd
+++ b/11-Copyright.Rmd
@@ -4,4 +4,4 @@
 
 Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
 
-Learn more about copyright at UBC from the [UBC Learning Commons](https://learningcommons.ubc.ca/resource-guides/respect-copyright/).
+Learn more about copyright at UBC from the [UBC Learning Commons](https://copyright.ubc.ca/).
