update slash direction

--- a/03-Directories.Rmd
+++ b/03-Directories.Rmd
@@ -17,7 +17,7 @@ usr/
 
 There's a very good chance you've never seen any of these folders. We call this the root of your file system; these folders don't sit inside of any other folders, they only hold other folders and files.
 
-The folder called `Users` holds all of the files that you create on your computer. In fact, there is a folder in there named after the user name that you use to log into your computer with. And within that a series of folders that you should be fairly familiar with including a `Downloads\` and `Documents\` folder. It also includes a `Desktop\` folder--your desktop is just another folder containing files, but one that has special status in terms of how those files are shown to you--ie, on your desktop when you start up your computer.
+The folder called `Users` holds all of the files that you create on your computer. In fact, there is a folder in there named after the user name that you use to log into your computer with. And within that a series of folders that you should be fairly familiar with including a `Downloads/` and `Documents/` folder. It also includes a `Desktop/` folder--your desktop is just another folder containing files, but one that has special status in terms of how those files are shown to you--ie, on your desktop when you start up your computer.
 
 <div class = "note">
 When writing about directories, directory names are frequently followed by a slash--`/`--to differentiate them from files.
