--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -4,6 +4,10 @@
 %
 \documentclass[
 ]{book}
+\title{Procedures and Guidelines}
+\author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
+\date{2022-05-26}
+
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
 \usepackage{iftex}
@@ -76,10 +80,6 @@
 \fi
 \usepackage[]{natbib}
 \bibliographystyle{plainnat}
-
-\title{Procedures and Guidelines}
-\author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2022-05-26}
 
 \begin{document}
 \maketitle
@@ -308,27 +308,9 @@ When operating in a multi-lingual or non-English environment, this can prove pro
 
 Convention has file naming proceed in the following order, with each element separated by an underscore \texttt{\_}, and words within an element joined with a dash \texttt{-}. The file type is generally added with a period \texttt{.} and is usually automatically generated when an application creates a file.
 
-\begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1389}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.2222}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1528}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1528}}@{}}
+\begin{longtable}[]{@{}llllll@{}}
 \toprule
-\begin{minipage}[b]{\linewidth}\raggedright
-Element-1
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\_Element-2
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\_Element-3
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\_Element-4
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\_Element-5
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-.Element-5
-\end{minipage} \\
+Element-1 & \_Element-2 & \_Element-3 & \_Element-4 & \_Element-5 & .Element-5 \\
 \midrule
 \endhead
 Last-Name & \_Date & \_Project & \_File-Contents & \_Version & .File-type \\
@@ -1112,21 +1094,9 @@ It is also very likely that we set up an Excel sheet where we recorded the site 
 
 Doing this, we'd end up with a table something like the following:
 
-\begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.1733}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2800}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2800}}@{}}
+\begin{longtable}[]{@{}llll@{}}
 \toprule
-\begin{minipage}[b]{\linewidth}\raggedright
-Site
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-Trout\_Caught\_Day\_1
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-Trout\_Caught\_Day\_2
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-Trout\_Caught\_Day\_3
-\end{minipage} \\
+Site & Trout\_Caught\_Day\_1 & Trout\_Caught\_Day\_2 & Trout\_Caught\_Day\_3 \\
 \midrule
 \endhead
 Mabel-lake & 1 & 3 & 3 \\
@@ -1219,21 +1189,9 @@ Now that's tidy data!
 \subsection*{Wide Data}\label{wide-data-1}}
 \addcontentsline{toc}{subsection}{Wide Data}
 
-\begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.1857}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2714}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2714}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2714}}@{}}
+\begin{longtable}[]{@{}llll@{}}
 \toprule
-\begin{minipage}[b]{\linewidth}\raggedright
-Site
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-Trout\_Caught\_Day\_1
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-Trout\_Caught\_Day\_2
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-Trout\_Caught\_Day\_3
-\end{minipage} \\
+Site & Trout\_Caught\_Day\_1 & Trout\_Caught\_Day\_2 & Trout\_Caught\_Day\_3 \\
 \midrule
 \endhead
 Mabel-lake & 1 & 3 & 3 \\
@@ -2496,10 +2454,10 @@ Assuming the FN on our microscope is 16 mm, let's calculate the field of view di
 Repeat this process for the remainder of the objectives on your microscope. Your final result should look something like this:
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2381}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2738}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2262}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2619}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.24}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.27}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.23}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.26}}@{}}
 \toprule
 \begin{minipage}[b]{\linewidth}\raggedright
 Ocular-magnification
